// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useUrlParams deletes keys that do not have truthy values 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "?g=%22%22&dateRangeStart=now-12&dateRangeEnd=now&pagination=foo",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "?g=%22%22&dateRangeStart=now-12&dateRangeEnd=now&pagination=foo",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [Function],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatHTMLMessage": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
    }
  }
>
  <MountWithReduxProvider>
    <Provider
      store={
        Object {
          "dispatch": [MockFunction],
          "getState": [MockFunction] {
            "calls": Array [
              Array [],
              Array [],
              Array [],
              Array [],
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
            ],
          },
          "replaceReducer": [MockFunction],
          "subscribe": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "undefined": [MockFunction],
        }
      }
    >
      <UseUrlParamsTestComponent
        hook={[Function]}
        updateParams={
          Object {
            "pagination": "",
          }
        }
      >
        <div>
          {"pagination":"foo","absoluteDateRangeStart":20,"absoluteDateRangeEnd":20,"autorefreshInterval":60000,"autorefreshIsPaused":false,"dateRangeStart":"now-12","dateRangeEnd":"now","filters":"","excludedFilters":"","search":"","statusFilter":"","focusConnectorField":false,"query":""}
        </div>
        <button
          id="setUrlParams"
          onClick={[Function]}
        >
          Set url params
        </button>
        <button
          id="getUrlParams"
          onClick={[Function]}
        >
          Get url params
        </button>
      </UseUrlParamsTestComponent>
    </Provider>
  </MountWithReduxProvider>
</Router>
`;

exports[`useUrlParams gets the expected values using the context 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatHTMLMessage": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
    }
  }
>
  <MountWithReduxProvider>
    <Provider
      store={
        Object {
          "dispatch": [MockFunction],
          "getState": [MockFunction] {
            "calls": Array [
              Array [],
              Array [],
              Array [],
              Array [],
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "selectedFilters": null,
                },
              },
            ],
          },
          "replaceReducer": [MockFunction],
          "subscribe": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "undefined": [MockFunction],
        }
      }
    >
      <UseUrlParamsTestComponent
        hook={[Function]}
      >
        <div>
          {"absoluteDateRangeStart":20,"absoluteDateRangeEnd":20,"autorefreshInterval":60000,"autorefreshIsPaused":false,"dateRangeStart":"now-15m","dateRangeEnd":"now","filters":"","excludedFilters":"","search":"","statusFilter":"","focusConnectorField":false,"query":""}
        </div>
        <button
          id="setUrlParams"
          onClick={[Function]}
        >
          Set url params
        </button>
        <button
          id="getUrlParams"
          onClick={[Function]}
        >
          Get url params
        </button>
      </UseUrlParamsTestComponent>
    </Provider>
  </MountWithReduxProvider>
</Router>
`;
